test/functions/jplevyak/introduce-dispatch-1.good
introduce-dispatch-1.chpl:5: error: Cannot assign to C(int(64)) from C(real(64))
